# MMapper

./: .appveyor.yml  .clang-format  .clang-tidy  .gitattributes  .gitignore  .snapcraft.yaml  .travis.yml  AGENTS.md  AUTHORS  AUTHORS.txt  BUILD.md  BUILD_GUIDE.md  CMakeLists.QtIOCompressor.in  CMakeLists.txt  COPYING.txt  ChangeLog  ChangeLog.txt  Dockerfile  INSTALL  INSTALL.qmake  INSTALL.txt  LICENSE.txt  MMAPPER_VERSION  NEWS.md  NEWS.txt  README.md  build-wasm.sh  build.sh  docker-compose.yml  iwyu-mapping-qt.imp  iwyu-mapping-stl.imp  iwyu-mapping.imp  manifest.json  mmapper.pro  mmapper2.pro  mudlet_clock_example.lua  org.mume.MMapper.json  snapcraft.yaml  vc++.bat  wasm.txt  (+1 more)
appdata/: CMakeLists.txt  Crash Log.lnk  Installation Guide.URL  mmapper.appdata.xml  org.mume.MMapper.appdata.xml.in  spells.ini
src/: .clang-tidy  CMakeLists.txt  Doxyfile  MacOSXBundleInfo.plist.in  gen-odr.sh  main.cpp  mmapper.astylerc  mmapper.desktop  mmapper.pro  mmapper2.pro  odr.cpp  org.mume.MMapper.desktop
src/adventure/: adventurejournal.cpp  adventurejournal.h  adventureprogress.cpp  adventureprogress.h  adventuresession.cpp  adventuresession.h  adventuretracker.cpp  adventuretracker.h  adventurewidget.cpp  adventurewidget.h  charstatus.cpp  charstatus.h  commswidget.cpp  commswidget.h  gameconsolewidget.cpp  gameconsolewidget.h  lineparsers.cpp  lineparsers.h  xpstatuswidget.cpp  xpstatuswidget.h
src/client/: AudioHintWidget.cpp  AudioHintWidget.h  ClientTelnet.cpp  ClientTelnet.h  ClientWidget.cpp  ClientWidget.h  ClientWidget.ui  Hotkey.cpp  Hotkey.h  HotkeyManager.cpp  HotkeyManager.h  PaletteManager.cpp  PaletteManager.h  PasswordDialog.cpp  PasswordDialog.h  PreviewWidget.cpp  PreviewWidget.h  clientwidget.cpp  clientwidget.h  ctelnet.cpp  ctelnet.h  displaywidget.cpp  displaywidget.h  inputwidget.cpp  inputwidget.h  stackedinputwidget.cpp  stackedinputwidget.h
src/clock/: mumeclock.cpp  mumeclock.h  mumeclockwidget.cpp  mumeclockwidget.h  mumeclockwidget.ui  mumemoment.cpp  mumemoment.h
src/comms/: CommsManager.cpp  CommsManager.h  CommsWidget.cpp  CommsWidget.h
src/configuration/: GroupConfig.cpp  GroupConfig.h  HotkeyManager.cpp  HotkeyManager.h  NamedConfig.h  PasswordConfig.cpp  PasswordConfig.h  configobserver.h  configuration.cpp  configuration.h
src/display/: AudioHintWidget.cpp  AudioHintWidget.h  CanvasMouseModeEnum.h  Characters.cpp  Characters.h  ConnectionLineBuilder.cpp  ConnectionLineBuilder.h  Connections.cpp  Connections.h  Filenames.cpp  Filenames.h  FontFormatFlags.h  FrameManager.cpp  FrameManager.h  GhostRegistry.h  IMapBatchesFinisher.cpp  IMapBatchesFinisher.h  InfoMarkSelection.cpp  InfoMarkSelection.h  InfomarkSelection.cpp  InfomarkSelection.h  Infomarks.cpp  Infomarks.h  MapBatches.cpp  MapBatches.h  MapCanvasConfig.h  MapCanvasData.cpp  MapCanvasData.h  MapCanvasRoomDrawer.cpp  MapCanvasRoomDrawer.h  OpenGL.cpp  OpenGL.h  ProjectionUtils.cpp  ProjectionUtils.h  RoadIndex.cpp  RoadIndex.h  RoomRenderTransform.cpp  RoomRenderTransform.h  RoomSelections.cpp  Textures.cpp  (+10 more)
src/expandoracommon/: AbstractRoomFactory.cpp  AbstractRoomFactory.h  MmQtHandle.h  RoomAdmin.cpp  RoomAdmin.h  RoomRecipient.cpp  RoomRecipient.h  abstractroomfactory.cpp  abstractroomfactory.h  component.cpp  component.h  coordinate.cpp  coordinate.h  exit.cpp  exit.h  frustum.cpp  frustum.h  init.cpp  listcycler.h  mmapper2event.cpp  mmapper2event.h  parseevent.cpp  parseevent.h  property.cpp  property.h  room.cpp  room.h  roomadmin.h  roomrecipient.h
src/global/: AnsiColor.h  AnsiOstream.cpp  AnsiOstream.h  AnsiTextUtils.cpp  AnsiTextUtils.h  Array.h  AsyncTasks.cpp  AsyncTasks.h  Badge.cpp  Badge.h  CaseUtils.cpp  CaseUtils.h  ChangeMonitor.h  CharBuffer.h  CharUtils.cpp  CharUtils.h  Charset-Utf16.cpp  Charset-Utf8.cpp  Charset.cpp  Charset.h  Color.cpp  Color.h  ConfigConsts-Computed.h  ConfigConsts.h  ConfigEnums.h  Connections.cpp  Connections.h  Consts.cpp  Consts.h  ConversionResult.h  Debug.h  Diff.cpp  Diff.h  DirectionType.cpp  DirectionType.h  EnumIndexedArray.cpp  EnumIndexedArray.h  FixedPoint.h  Flags.cpp  Flags.h  (+114 more)
src/group/: CGroupChar.cpp  CGroupChar.h  ColorGenerator.cpp  ColorGenerator.h  GroupManagerApi.cpp  enums.cpp  enums.h  groupwidget.cpp  groupwidget.h  mmapper2character.h  mmapper2group.cpp  mmapper2group.h  tokenmanager.cpp  tokenmanager.h
src/logger/: autologger.cpp  autologger.h
src/mainwindow/: AsyncTypes.h  AudioVolumeSlider.cpp  AudioVolumeSlider.h  DescriptionWidget.cpp  DescriptionWidget.h  MapZoomSlider.cpp  MapZoomSlider.h  TasksPanel.cpp  TasksPanel.h  ThemeManager.cpp  ThemeManager.h  UpdateDialog.cpp  UpdateDialog.h  VisibilityFilterWidget.cpp  VisibilityFilterWidget.h  WinDarkMode.cpp  WinDarkMode.h  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  connectioneditattrdlg.h  findroomsdlg.cpp  findroomsdlg.h  findroomsdlg.ui  infomarkseditdlg.cpp  infomarkseditdlg.h  infomarkseditdlg.ui  mainwindow-async.cpp  mainwindow-async.h  mainwindow-saveslots.cpp  mainwindow.cpp  mainwindow.h  metatypes.cpp  metatypes.h  roomeditattrdlg.cpp  roomeditattrdlg.h  roomeditattrdlg.ui  utils.cpp  utils.h  welcomewidget.cpp  (+2 more)
src/map/: AbstractChangeVisitor.cpp  AbstractChangeVisitor.h  Change.cpp  Change.h  ChangeList.cpp  ChangeList.h  ChangePrinter.cpp  ChangePrinter.h  ChangeTypes.cpp  ChangeTypes.h  Changes.cpp  Changes.h  CommandId.cpp  CommandId.h  Compare.h  ConnectedRoomFlags.h  Crtp.h  Diff-Test.cpp  Diff.cpp  Diff.h  DoorFlags.cpp  DoorFlags.h  DoorsFlags.h  ExitDirection.cpp  ExitDirection.h  ExitFieldVariant.cpp  ExitFieldVariant.h  ExitFields.cpp  ExitFields.h  ExitFlags.cpp  ExitFlags.h  ExitsFlags.h  Map.h  (+66 more)
tests/: CMakeLists.txt  TestCTimers.cpp  TestCTimers.h  TestGlobal.cpp  TestGlobal.h  TestGroup.cpp  TestGroup.h  TestHotkeyManager.cpp  TestHotkeyManager.h  TestMainWindow.cpp  TestMainWindow.h  TestMap.cpp  TestMap.h  TestPasswordField.cpp  TestPasswordField.h  TestProxy.cpp  TestProxy.h  testadventure.cpp  testadventure.h  testclock.cpp  testclock.h  testexpandoracommon.cpp  testexpandoracommon.h  testparser.cpp  testparser.h
(+521 files in other folders)
